name:                brainass
version:             0.1.0.0
synopsis:            Brainfuck to WebAssembly compiler.
author:              Daniel Duan
maintainer:          daniel@duan.ca
build-type:          Simple
cabal-version:       >=1.10

executable brainass
  main-is:             brainass.hs
  build-depends:       base >=4.11 && <4.12
  default-language:    Haskell2010
